# circus2csp

./: .c2c  .directory  .gitignore  AST.hs  AST.lhs  Animate.hs  Animate.lhs  BZTT.hs  Bindings.lhs  CLPSTests.hs  CLPSTests.lhs  CLPSType.hs  CLPSType.lhs  CLPSWrite.hs  CLPSWrite.lhs  CRL.hs  CRL.lhs  CircusUI.hs  CircusUI.lhs  DeCode.hs  DefSets.lhs  EParseLib.hs  EParseLib.lhs  EParseTest.hs  EParseTest.lhs  Errors.hs  Errors.lhs  Eval.hs  Eval.lhs  Eval_Test.hs  Eval_Test.lhs  FSets.lhs  Formatter.hs  Formatter.lhs  FormatterToCSP.hs  FormatterToCSP.lhs  Formatter_Test.hs  Formatter_Test.lhs  Hack.hs  HigherOrder.lhs  (+78 more)
app/: CircusUI.lhs  Main.lhs
design/: README.md  build-import-deps.sh
doc/: MAIN.tex  meetings-log.txt  spec.txt
examples/: scheduler.zed
exs/: .gitignore  chrono.csp  chrono.tex  ex.txt  ex1.tex  ex11.csp  ex11.tex  ex12.csp  ex12.full.tex  ex12.tex  ex12a.tex  ex13.tex  ex15.tex  ex5.tex  ex8.tex  ex9.tex  example.lhs  example1.csp  example_def_sets_values.28.03.17.csp  exhd1.tex  exhd2.tex  exhd4.tex  exhdnoschema.tex  exhdnoschema.v2.csp  exhdnoschema.v2.tex  exima.tex  function_aux.csp  letWithin.csp  live1.tex  live2.tex  live3.csp  live3.tex  livedemo1.txt  livedemo2.txt  wakeup.csp
exs/RandallYeCases/: .c2c  README.txt
exs/alarm/: MAIN.tex  models.tex  testharness.csp
exs/cases/: ex12-spec.txt  wakeup.tex
exs/constructs/: ex10.tex  ex11.tex  ex12.csp  ex12.tex  ex14.tex  ex6.tex  ex8.tex  ex9.tex  promvarst.tex  testvar.tex  univ.tex
exs/examples-jaza/: grades.zed
exs/extchoice/: asgFirstThenChoose-assert.csp  asgFirstThenChoose.csp  asgFirstThenChoose.tex  asgdeadlock.csp
exs/limits/: .gitignore  limits.csp  limits.modular.10-variables.csp  limits.modular.3-variables-exp.csp  limits.modular.3-variables.csp  limits.modular.csp  limits.modular.messing.csp  limits.multitype.csp  limits.result.txt  memory-ref.csp
exs/memory/: allrefmix (Cópia em conflito de artur-OptiPlex-980 2018-07-02).csp  allrefmix.csp  allrefnat.csp  circus.sty  mem.csp  mem_alarm.csp  memory.tex  script-memory.hs  tests_memory.csp
exs/random/: interleave.csp  live1.tex  live3.tex  memorymerge.tex  mnc.tex  steps.tex
exs/ring-buffer-marcel/: ringbuffer-stateless.tex  ringbuffer.tex  ringbuffer_stateless.csp
exs/samuel/: .directory  .part  alternanciadepoder.tex  autistafeliz.tex  chocolaterepartido.tex  controller.tex  corridadebastoes.tex  dotfieldsingleenv.tex  extracoverage.tex  frontendtesting.tex  frontendtesting2.tex  function_aux.csp  roadtocoverage1.tex  roadtocoverage10.tex  roadtocoverage12.tex  roadtocoverage13.tex  roadtocoverage14.tex  roadtocoverage15.tex  roadtocoverage16.tex  roadtocoverage17.tex  roadtocoverage19.tex  roadtocoverage20.tex  roadtocoverage22.tex  roadtocoverage23.tex  roadtocoverage24.tex  roadtocoverage5.tex  roadtocoverage6.tex  roadtocoverage8.tex  roadtocoverage9.tex  roadtocoverageaxdef.tex  roadtocoverageextchoiceaction.tex  roadtocoveragefinal.tex  roadtocoverageintchoice.tex  roadtocoverageite.tex  roadtocoverageminiaxdef.tex
exs/schemas/: AxDef2Fun.tex  DumbCounter.tex
haskabelle/: AST.hs  DeCode.hi  DeCode.hs  HASKABELLE-TEXT.aux  HASKABELLE-TEXT.fdb_latexmk  HASKABELLE-TEXT.fls  HASKABELLE-TEXT.tex  HASKABELLE-TEXT.toc  MappingFunStatelessCircus.hs  MappingFunStatelessCircus.lhs  OmegaDefs.hs  OmegaDefs.lhs  decode  lsthaskell.sty
haskabelle/thy/: .AbstractOmegaDefs.thy.marks  AST.thy  AST.thy~  AbstractOmegaDefs.thy  MappingFunStatelessCircus.thy  MappingFunStatelessCircus.thy~  OmegaDefs.thy  OmegaDefs.thy~  Prelude.thy  Prelude.thy~  ROOT  TestingMappingFunStatelessCircus.thy
ring-buffer-marcel/: function_aux.csp  ringbuffer-stateless.tex  ringbuffer.tex  ringbuffer_stateless.csp
src/: AST.lhs  Animate.lhs  BZTT.lhs  Bindings.lhs  CRL.lhs  DistMemCRL.lhs  DistMemMappingFunCircusCSP (Cópia em conflito de artur-OptiPlex-980 2018-07-10).lhs  DistMemMappingFunCircusCSP.lhs  DistMemMappingFunStatelessCircus.lhs  DistMemOmegaDefs.lhs  EParseLib.lhs  Errors.lhs  FDRChecks.lhs  FSets.lhs  FiniteSets.lhs  Formatter.lhs  Lexer.lhs  MappingFunCircusCSP.lhs  MappingFunStatelessCircus.lhs  NewEParseLib.lhs  OmegaDefs.lhs  Optimize.lhs  Parse.lhs  PreVarCRL.lhs  PreVarMappingFunCircusCSP.lhs  PreVarMappingFunStatelessCircus.lhs  PreVarOmegaDefs.lhs  PrintTex.lhs  Reorder.lhs  RepParamAction.lhs  Subs.lhs  Substitution.lhs  TemplateFunAST.lhs  Unfold.lhs  refinementSteps.lhs  temp.hs  template_func_ast.lhs
test_haskabelle/: AST.hs  CRL.hs  CRL.hs-orig  CircusUI.hs  DefSets.hs  MappingFunStatelessCircus.hs  MappingFunStatelessCircus.lhs-orig  OmegaDefs.hs
test_haskabelle/haskabelle/: AST.thy  (+5 more)
tests/: Makefile  freetypes.jaza
userman/: bbook.zed  master.tex
(+406 files in other folders)
