name:                c2c
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/c2c#readme
license:             BSD3
license-file:        LICENSE
author:              Artur Oliveira Gomes here
maintainer:          example@example.com
copyright:           2017 Artur Oliveira Gomes
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     AST
                     , Errors
                     , Animate
                     , CRL
                     , EParseLib
                     , FiniteSets
                     , Lexer
                     , OmegaDefs
                     , Parse
                     , Subs
                     , Formatter
                     , MappingFunStatelessCircus
                     , Eval
                     , MappingFunCircusCSP
                     , Optimize
                     , Reorder
                     , SetSize
                     , Unfold
  build-depends:       pretty >= 1.1.3.3, base >= 4.7 && < 5, array >= 0.5.1.1, deepseq >= 1.4.2.0, rts >= 1.0, text

  default-language:    Haskell2010

executable c2c-exe
  hs-source-dirs:      app
  main-is:             CircusUI.lhs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,  directory >= 1.3.0.0
                     , c2c
  default-language:    Haskell2010

test-suite c2c-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , c2c
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/c2c
