name:                circusmc
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/circusmc#readme
license:             BSD3
license-file:        COPYING
author:              Artur O.Gomes
maintainer:          example@example.com
copyright:           2017 Artur Gomes
category:            Formal
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable circusmc-exe
  hs-source-dirs:      .
  main-is:             Main.hs
  build-depends:       base
                     , circusmc
  default-language:    Haskell2010

